--- a/report.tex
+++ b/report.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage[a4paper, total={6in, 8in}]{geometry}
 \usepackage{amsmath}
+\usepackage{hyperref}
 
 \title{Postdoc work preparation}
 \date{\today}
@@ -138,4 +139,16 @@ For such deterministic dynamics, the transition probability can be written in te
 \begin{equation}
 p(x_t\rightarrow x_{t+\Delta t}) = \delta(x_{t+\Delta t}-\phi_{\Delta t}(x_t))
 \end{equation}
+
+\subsection{Problems to address}
+
+\begin{itemize}
+\item Most of the trajectories are unreactive in a TPS simulation. How do we calculate the 
+reversible work from all of these? Do we keep doing the simulation till we have converged 
+free enrgies? 
+\item TPS virtual replica exchange \cite{Brotzakis19JChemPhys151p174111} 
+\item Recycling the rejected Monte-Carlo moves \cite{Frenkel17571}
+\end{itemize}
+\bibliographystyle{unsrt}
+\bibliography{report}
 \end{document}
