some minor changes

--- a/group-meeting/june_09_2021/report.tex
+++ b/group-meeting/june_09_2021/report.tex
@@ -17,7 +17,8 @@ The probability distribution function for a point in the phase space ($\mathbf{x
 P(\mathbf{x}) = \frac{e^{-\beta E(\mathbf{x})}}{\mathcal{Z}}
 \end{equation}
 
-
+The best estimate of the probability distribution from an ensemble of trajectories can be 
+obtained by calculating the frequency of observing a 
 The free energy for a given window with order parameter $\lambda_i$ can be obtained as 
 \begin{equation}
 F(\lambda_i) = -k_{B}T[ln(P(\lambda_i))] + C_i
