added some more stuff to the pnp free energy manuscript

--- a/group-meeting/july_7_2022/report.tex
+++ b/group-meeting/july_7_2022/report.tex
@@ -12,6 +12,25 @@
 \author{Schwartz group}
 \begin{document}
 \maketitle
+The calculation of free energies for the unconstrained PNP system was repeated twice with
+trajectories 63 and 141 from the TPS ensemble. 
+
+\begin{figure}[ht]
+  \centering
+  \begin{minipage}[b]{0.45\linewidth}
+    \includegraphics[scale=0.53]{figures/dist.pdf}
+    %\caption{Distribution of the order parameter}
+    \label{fig:dist}
+  \end{minipage}
+  \quad
+  \begin{minipage}[b]{0.45\linewidth}
+    \includegraphics[scale=0.53]{figures/fenergy.pdf}
+    %\caption{Free energy using Boltzmann inversion}
+    \label{fig:fenergy}
+  \end{minipage}
+  \caption{The distribution of order parameters (left) considering only trajectories sampled wihtin a particular window and the corresponding free energy profile.}
+\end{figure}
+
 
 \section{Choice of reactive trajectory}
 \begin{figure}[ht!]
