added some more reports

--- a/free_energy_report/report.tex
+++ b/free_energy_report/report.tex
@@ -54,7 +54,7 @@ how often the reaction coordinate $\xi({\textbf{q}})$ falls within the various h
 \item Run TPS simulations within each window
 \begin{itemize}
 	\item How to do this? Take a parent reactive trajectory that goes from the reactant to product. Define state A and B to be the boundaries of the window. Fix a smaller time within which the dynamics can take the system
-	from A to B or B to A. 
+	from A to B or B to A. Run TPS simulations accepting all trajectories? 
 	\item 75 trajectories per window with 10 windows means 750 trajectories! Thats a large number and automation of the input and submission is necessary.
 	Maybe using python or BASH
 	\end{itemize}
