--- a/pnp-free-energies/pnp-free-energy.tex
+++ b/pnp-free-energies/pnp-free-energy.tex
@@ -45,7 +45,8 @@ amssymb,amsmath,
 %\tableofcontents
 
 \section{Introduction}
-The free energy calculations were performed within the Transition path sampling (TPS) method and 
+We follow algorithm for the free energy calculations based on TPS for the reaction catalyzed by 
+human PNP enzyme. 
 
 \bibliographystyle{unsrt}
 \bibliography{report}
