added some more text and figures

--- a/group-meeting/oct-31-2022/report.tex
+++ b/group-meeting/oct-31-2022/report.tex
@@ -60,7 +60,7 @@ prb,
 
 \preprint{APS/123-QED}
 
-\title{Transition path sampling study of the MBHase reaction}% Force line breaks with \\
+\title{Transition path sampling study of the MBHase reaction mechanism}% Force line breaks with \\
 %\thanks{A footnote to the article title}%
 
 \author{Sree Ganesh Balasubramani}
@@ -112,15 +112,28 @@ prb,
 %\tableofcontents
 
 \section{\label{sec:level1}Introduction}
-MBHase \cite{Crawshaw2022}
+MBHase \cite{Crawshaw2022} 
 
-\section{Committor analysis}
+\section{Transition path sampling}
+
+\subsection{TPS ensemble}
+The reaction well is defined through the 
+
+\subsection{Committor analysis}
 
 \begin{figure}[ht!]
 \centering
 \includegraphics[scale=1.0]{figures/dist46.pdf}
+\caption{The committor for several time frames}
+\label{fig:comm-dist-46}
 \end{figure}
 
+\begin{figure}[ht!]
+\centering
+\includegraphics[scale=1.0]{figures/dist54.pdf}
+\caption{The committor for several time frames for trajectory 54}
+\label{fig:comm-dist-54}
+\end{figure}
 
 \bibliography{report}% Produces the bibliography via BibTeX.
 
