added some more information

--- a/group-meeting/oct-31-2022/report.tex
+++ b/group-meeting/oct-31-2022/report.tex
@@ -177,6 +177,26 @@ Committor analysis is carried out to obtain the transition state structure.
 %\label{fig:comm-dist-54}
 %\end{figure}
 %\bibliography{report}% Produces the bibliography via BibTeX.
+\newpage
+\subsection{Comparison of reactive trajectories between the two MBHase variants}
+For the older, less evolved variant, 21 reactive trajectories have been obtained thus far and Fig. \ref{fig:oldmbhase-dis}
+depicts the typical proton transfer steps as a function of time and in this case the proton transfers seem to occur 
+simultaneously. From Fig. \ref{fig:newmbhase-dis}, for the more evolved variant (82 reactive trajectories harvested thus far)
+it can be seen that the proton transfer to the negatively charged oxyanion (O4) occurs first before the catalytic 
+water molecule abstracts the proton from C5 carbon atom.  
+\begin{figure*}[ht!]
+\centering
+\begin{minipage}[b]{.4\textwidth}
+\includegraphics[scale=0.9]{figures/mbhase-diff19.pdf}
+\caption{The OH2-H5 distance (proton abstraction by water) and O4-H2 distance (proton abstraction by the oxyanion)
+as a function of time along a reactive trajectory for the less evolved MBHase variant}\label{fig:oldmbhase-dis}
+\end{minipage}\qquad
+\begin{minipage}[b]{.4\textwidth}
+\includegraphics[scale=0.9]{figures/new-mbhase-diff80.pdf}
+\caption{The OH2-H5 distance (proton abstraction by water) and O4-H2 distance (proton abstraction by the oxyanion)
+as a function of time along a reactive trajectory for the more evolved MBHase variant}\label{fig:newmbhase-dis}
+\end{minipage}
+\end{figure*}
 
 \end{document}
 
