fixed some more merge conflicts

--- a/group-meeting/oct-31-2022/report.tex
+++ b/group-meeting/oct-31-2022/report.tex
@@ -131,39 +131,43 @@ and a catalytic water molecule is present near the O$^{-}$ nucleophile.
 \end{figure*}
 
 \subsection{Committor analysis}
+\subsubsection{Newer evolved variant}
 Committor analysis is carried out to obtain the transition state structure.
 \begin{figure*}[ht!]
 \centering
 \begin{minipage}[b]{.4\textwidth}
-\includegraphics[scale=0.75]{figures/dist46.pdf}
-\caption{Committor analysis for trajectory $\#46$}\label{fig:comm46}
+\includegraphics[scale=0.75]{figures/dist54.pdf}
+\caption{Committor analysis for trajectory $\#54$. The numbers above each data point represent the 
+number of NOGO trajectories in the analysis out of a total of 50.}\label{fig:comm46}
 \end{minipage}\qquad
 \begin{minipage}[b]{.4\textwidth}
-\includegraphics[scale=0.75]{figures/dist54.pdf}
-\caption{Committor analysis for trajectory $\#54$}\label{fig:comm54}
+\includegraphics[scale=0.75]{figures/dist61.pdf}
+\caption{Committor analysis for trajectory $\#61$. The numbers above each data point represent the 
+number of NOGO trajectories in the analysis out of a total of 50.}\label{fig:comm54}
 \end{minipage}
 \end{figure*}
 %
 \begin{figure}[ht!]
 \centering
-\includegraphics[scale=0.75]{figures/dist61.pdf}
+\includegraphics[scale=0.75]{figures/dist79.pdf}
 \label{fig:comm61}
-\caption{Committor analysis for trajectory $\#61$}
+\caption{Committor analysis for trajectory $\#79$. The numbers above each data point represent the 
+number of NOGO trajectories in the analysis out of a total of 50.}
 \end{figure}
 %
-\begin{figure}[ht!]
-\centering
-\includegraphics[scale=0.35]{figures/trans-61.pdf}
-\label{fig:trans61}
-\caption{Transition state for the reaction catalyzed by the MBH1.7 enzyme}
-\end{figure}
+%\begin{figure}[ht!]
+%\centering
+%\includegraphics[scale=0.35]{figures/trans-61.pdf}
+%\label{fig:trans61}
+%\caption{Transition state for the reaction catalyzed by the MBH1.7 enzyme}
+%\end{figure}
 %
-\begin{figure}[ht!]
-\centering
-\includegraphics[scale=0.35]{figures/exp-ts1.pdf}
-\label{fig:exp-ts1}
-\caption{One of the transition states predicted from DFT calculations for the reaction catalyzed by the MBH1.7 enzyme}
-\end{figure}
+%\begin{figure}[ht!]
+%\centering
+%\includegraphics[scale=0.35]{figures/exp-ts1.pdf}
+%\label{fig:exp-ts1}
+%\caption{One of the transition states predicted from DFT calculations for the reaction catalyzed by the MBH1.7 enzyme}
+%\end{figure}
 %\begin{figure}[ht!]
 %\centering
 %\includegraphics[scale=1.0]{figures/dist46.pdf}
@@ -177,26 +181,34 @@ Committor analysis is carried out to obtain the transition state structure.
 %\label{fig:comm-dist-54}
 %\end{figure}
 %\bibliography{report}% Produces the bibliography via BibTeX.
-\newpage
-\subsection{Comparison of reactive trajectories between the two MBHase variants}
-For the older, less evolved variant, 21 reactive trajectories have been obtained thus far and Fig. \ref{fig:oldmbhase-dis}
-depicts the typical proton transfer steps as a function of time and in this case the proton transfers seem to occur 
-simultaneously. From Fig. \ref{fig:newmbhase-dis}, for the more evolved variant (82 reactive trajectories harvested thus far)
-it can be seen that the proton transfer to the negatively charged oxyanion (O4) occurs first before the catalytic 
-water molecule abstracts the proton from C5 carbon atom.  
-\begin{figure*}[ht!]
-\centering
-\begin{minipage}[b]{.4\textwidth}
-\includegraphics[scale=0.9]{figures/mbhase-diff19.pdf}
-\caption{The OH2-H5 distance (proton abstraction by water) and O4-H2 distance (proton abstraction by the oxyanion)
-as a function of time along a reactive trajectory for the less evolved MBHase variant}\label{fig:oldmbhase-dis}
-\end{minipage}\qquad
-\begin{minipage}[b]{.4\textwidth}
-\includegraphics[scale=0.9]{figures/new-mbhase-diff80.pdf}
-\caption{The OH2-H5 distance (proton abstraction by water) and O4-H2 distance (proton abstraction by the oxyanion)
-as a function of time along a reactive trajectory for the more evolved MBHase variant}\label{fig:newmbhase-dis}
-\end{minipage}
-\end{figure*}
+%\newpage
+%\subsection{Comparison of reactive trajectories between the two MBHase variants}
+%For the older, less evolved variant, 21 reactive trajectories have been obtained thus far and Fig. \ref{fig:oldmbhase-dis}
+%depicts the typical proton transfer steps as a function of time and in this case the proton transfers seem to occur 
+%simultaneously. From Fig. \ref{fig:newmbhase-dis}, for the more evolved variant (82 reactive trajectories harvested thus far)
+%it can be seen that the proton transfer to the negatively charged oxyanion (O4) occurs first before the catalytic 
+%water molecule abstracts the proton from C5 carbon atom.  
+%\begin{figure*}[ht!]
+%\centering
+%\begin{minipage}[b]{.4\textwidth}
+%\includegraphics[scale=0.9]{figures/mbhase-diff19.pdf}
+%\caption{The OH2-H5 distance (proton abstraction by water) and O4-H2 distance (proton abstraction by the oxyanion)
+%as a function of time along a reactive trajectory for the less evolved MBHase variant}\label{fig:oldmbhase-dis}
+%\end{minipage}\qquad
+%\begin{minipage}[b]{.4\textwidth}
+%\includegraphics[scale=0.9]{figures/new-mbhase-diff80.pdf}
+%\caption{The OH2-H5 distance (proton abstraction by water) and O4-H2 distance (proton abstraction by the oxyanion)
+%as a function of time along a reactive trajectory for the more evolved MBHase variant}\label{fig:newmbhase-dis}
+%\end{minipage}
+%\end{figure*}
 
+\subsubsection{Older less-evolved variant}
+\begin{figure}[ht!]
+\centering
+\includegraphics[scale=0.75]{figures/dist41.pdf}
+\label{fig:comm41}
+\caption{Committor analysis for trajectory $\#41$. The numbers above each data point represent the 
+number of NOGO trajectories in the analysis out of a total of 50.}
+\end{figure}
 \end{document}
 
